# someTutorials

./: .gitignore  README copy.md  README.md  copy-update-gitee.py  project.md
DeepLearning/: DeepLearning-README.md  mlp.md
DeepLearning-old/basic_deepLearning/: Regularization.md
DeepLearning-old/cnn/: cnn.md
DeepLearning-old/dataset/: dataset.md
DeepLearning-old/rnn/: 零基础入门深度学习(5) - 循环神经网络 - 作业部落 Cmd Markdown 编辑阅读器.html
DeepLearning/AiTrash/: 垃圾分类.md
DeepLearning/basic_deepLearning/: Regularization.md  basic_deepLearning.md
DeepLearning/cnn/: c.py  cnn.md  零基础入门深度学习(4) - 卷积神经网络 - 作业部落 Cmd Markdown 编辑阅读器.html
DeepLearning/dakrnet/: Makefile  usage.md
DeepLearning/dataset/: dataset.md
DeepLearning/gan/: gan.md
DeepLearning/lstm/: 零基础入门深度学习(6) - 长短时记忆网络(LSTM) - 作业部落 Cmd Markdown 编辑阅读器.html
DeepLearning/mlp/: mlp.pptx
DeepLearning/rnn-recursive/: 零基础入门深度学习(7) - 递归神经网络 - 作业部落 Cmd Markdown 编辑阅读器.html
DesignPattern/: README.md
MachineLearning/: MachineLearning.md  usage.md
MachineLearning/AiTrash/: 垃圾分类.md  垃圾分类解题思路.md
MachineLearning/back_propagation/: back_propagation.md
MachineLearning/basic_deepLearning/: basic_deepLearning.md
MachineLearning/cnn/: cnn.md
MachineLearning/dakrnet/: Makefile
MachineLearning/垃圾分类/: a.py  垃圾分类.md
c/: c.md
c/struct/: struct.md
c/struct/src/: struct-ptr.c  (+2 more)
cmake/: cmake.md
cxx/: cxx.md  test.cpp
cxx/PROJ/: .gitignore  CMakeLists.txt  README.md  compile.sh
cxx/PROJ/app/: CMakeLists.txt  main.cpp
cxx/PROJ/src/: CMakeLists.txt  MyClass.cpp
cxx/PROJ/src/Match/: Match.cpp
cxx/PROJ/src/Solution/: CMakeLists.txt  Solution.cpp
cxx/PROJ/src/include/Match/: Match.h
cxx/PROJ/src/include/Solution/: Solution.h
cxx/docs/: README.md
cxx/src/: test.cpp
deepLearning/: deepLearning.md  垃圾分类.md
docs/deepLearning/: deepLearning_cn.md
docs/git/: git.md  git_cn.md
docs/linux/: wsl2.md
docs/raspberry/: raspberry.md
docs/stm32/: .gitignore  project.md  stm32-env-install-win.md  stm32-linux.md  stm32.md
git/: git.md  git_cn.md
leetcode/: README.md
leetcode/1-two-sum/: README.md  two-sum.cpp
linux/: linux-README.md  linux.md  wsl2.md
linux/basic/: basic.md
linux/desktop-MacOS/: desktop-MacOS.md
linux/install/: nvidia.md
linux/nvidia/: nvidia.md
linux/wsl2/: desktop-MacOS.md  wsl2.md
python/: README.md
qt/: qt.md
rk3399/: README.md
stm32/: project.md  stm32.md
(+79 files in other folders)
